--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,12 @@
  * Copyright (C) 2011-2012 Hakim El Hattab, http://hakim.se
  */
 
-
+.logo {
+  border:0 !important;
+  -webkit-box-shadow: 0 0 0 hsla(0, 0%, 0%, 0.15) !important;
+  -moz-box-shadow: 0 0 0 rgba(0, 0, 0, 0.15) !important;
+  box-shadow: 0 0 0 hsla(0, 0%, 0%, 0.15) !important;
+}
 /*********************************************
  * RESET STYLES
  *********************************************/
@@ -39,7 +44,12 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 
-
+code {
+    border: 1px solid hsl(0, 0%, 92%);
+    background-color:hsl(0, 0%, 97%);
+    border-radius: 3px;
+    padding:0px 3px 1px;
+}
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
