--- a/lib/css/highlight/zenburn.css
+++ b/lib/css/highlight/zenburn.css
@@ -13,11 +13,13 @@ pre code {
 
 pre .keyword,
 pre .tag,
-pre .django .tag,
-pre .django .keyword,
 pre .css .class,
 pre .css .id,
-pre .lisp .title {
+pre .lisp .title,
+pre .nginx .title,
+pre .request,
+pre .status,
+pre .clojure .attribute {
   color: #E3CEAB;
 }
 
@@ -55,10 +57,8 @@ pre .ruby .subst {
 
 pre .dos .keyword,
 pre .python .decorator,
-pre .class .title,
-pre .haskell .label,
-pre .function .title,
-pre .ini .title,
+pre .title,
+pre .haskell .type,
 pre .diff .header,
 pre .ruby .class .parent,
 pre .apache .tag,
@@ -71,10 +71,7 @@ pre .input_number {
 pre .dos .winutils,
 pre .ruby .symbol,
 pre .ruby .symbol .string,
-pre .ruby .symbol .keyword,
-pre .ruby .symbol .keymethods,
-pre .ruby .string,
-pre .ruby .instancevar {
+pre .ruby .string {
   color: #DCA3A3;
 }
 
@@ -106,6 +103,7 @@ pre .doctype {
   color: #7F9F7F;
 }
 
+pre .coffeescript .javascript,
 pre .xml .css,
 pre .xml .javascript,
 pre .xml .vbscript,
