added in base slides

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,77 +1,83 @@
 body{
-    -webkit-transition-property: background-color;
-    -webkit-transition-duration: 250ms;
+  -webkit-transition-property: background-color;
+  -webkit-transition-duration: 250ms;
 }
 
-.todo {
-    color: #af2f2f !important;
-    font-weight:bold;
+.todo, .backbone {
+  color: #af2f2f !important;
+  font-weight:bold;
 }
 
-.amd {
-    color:#42a4ec !important;
-    font-weight:bold;
+.amd, .marionette {
+  color:#42a4ec !important;
+  font-weight:bold;
 }
 
 .endSection body {
-    background-color:#ccc;
+  background-color:#ccc;
 }
 
 .pull-left {
-    float:left;
+  float:left;
 }
 
 .pull-right {
-    float:right
+  float:right
 }
 
 .align-left {
-    text-align:left;
+  text-align:left;
 }
 .align-right {
-    text-align:right;
+  text-align:right;
 }
 
 code {
-    clear:both;
+  clear:both;
 }
 
 blockquote::before {
-    content: "“";
-    position: absolute;
-    top: -15px;
-    left: 0;
-    font-size: 5em;
-    line-height: 1;
-    color: hsl(180, 14%, 58%);
-    z-index: 1;
-    font-family:serif;
+  content: "“";
+  position: absolute;
+  top: -15px;
+  left: 0;
+  font-size: 5em;
+  line-height: 1;
+  color: hsl(180, 14%, 58%);
+  z-index: 1;
+  font-family:serif;
 
 }
 
 blockquote::after {
-    content: "";
-    display:none;
+  content: "";
+  display:none;
 }
 
 blockquote {
-    padding-left:100px !important;
-    padding-right:15px !important;
-    text-align:justify;
-    width:90% !important;
+  padding-left:100px !important;
+  padding-right:15px !important;
+  text-align:justify;
+  width:90% !important;
 }
 
 cite {
-    color:#af2f2f;
-    text-align:right;
-    display:block;
+  color:#af2f2f;
+  text-align:right;
+  display:block;
 }
 
 .data {
-    color:hsl(187, 100%, 46%);
+  color:hsl(187, 100%, 46%);
 }
 
 .collections {
-    color: hsl(130, 100%, 25%);
+  color: hsl(130, 100%, 25%);
+}
+
+li.center {
+  list-style-type: none;
+  text-align: center;
+  color: #af2f2f;
 }
 
